fix: fix pixelize for form elements
fix #262

--- a/scss/base/variables.scss
+++ b/scss/base/variables.scss
@@ -7,7 +7,7 @@ $background-color: $color-white;
 
 $cursor-url: url(https://unpkg.com/nes.css/assets/cursor.png);
 $cursor-click-url: url(https://unpkg.com/nes.css/assets/cursor-click.png);
-$border-size: 0.25em;
+$border-size: 4px;
 
 $default-colors: (
   normal: $background-color,
