--- a/scss/pixel-arts/bcrikko.scss
+++ b/scss/pixel-arts/bcrikko.scss
@@ -20,20 +20,20 @@
     (2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2),
     (0,2,2,2,2,2,2,2,2,2,2,2,2,2,2,0),
   );
+  $size: 6px;
 
   position: relative;
   display: inline-block;
-  width: calc(1em * 16);
-  height: calc(1em * 16);
-  font-size: 4px;
+  width: $size * length(nth($bcrikko, 1));
+  height: $size * length($bcrikko);
 
   &::before {
     position: absolute;
-    top: -1em;
-    left: -1em;
+    top: -$size;
+    left: -$size;
     content: "";
     background: transparent;
 
-    @include pixelize($bcrikko, $bcrikko-colors);
+    @include pixelize($size, $bcrikko, $bcrikko-colors);
   }
 }
