--- a/scss/pixel-arts/bulbasaur.scss
+++ b/scss/pixel-arts/bulbasaur.scss
@@ -1,41 +1,39 @@
 .nes-bulbasaur {
-  // prettier-ignore
-  $bulbasaur-colors: (#000, #8beb46, #2d8d22, #5ceee1,
-   #3fc3b5, #fdfdf5, #ca242a);
+  $bulbasaur-colors: (#000, #8beb46, #2d8d22, #5ceee1, #3fc3b5, #fdfdf5, #ca242a);
   // prettier-ignore
   $bulbasaur: (
-    (0,0,0,0,0,0,0,0,0,0,0,0,1,1,1),
-    (0,0,0,0,0,0,0,0,0,0,0,1,2,2,2,1),
-    (0,0,0,0,0,0,0,0,0,1,1,1,2,2,2,1),
-    (0,0,0,0,0,0,0,1,1,2,2,3,2,2,3,2,1,1),
-    (0,0,0,1,1,0,1,2,2,2,3,3,2,2,3,2,2,2,1),
+    (0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,0,0,0,0,0),
+    (0,0,0,0,0,0,0,0,0,0,0,1,2,2,2,1,0,0,0,0),
+    (0,0,0,0,0,0,0,0,0,1,1,1,2,2,2,1,0,0,0,0),
+    (0,0,0,0,0,0,0,1,1,2,2,3,2,2,3,2,1,1,0,0),
+    (0,0,0,1,1,0,1,2,2,2,3,3,2,2,3,2,2,2,1,0),
     (0,0,1,4,4,1,1,2,2,3,2,3,2,2,2,3,2,2,2,1),
     (0,0,1,4,4,4,1,1,3,2,3,2,2,2,2,2,3,2,2,1),
     (0,0,1,4,4,4,4,5,1,2,3,2,2,2,2,2,3,2,2,1),
-    (0,1,4,4,5,4,5,5,4,1,1,1,2,2,2,2,3,2,1),
-    (1,1,5,4,4,4,4,4,4,4,4,1,2,2,2,1,1,1,1),
-    (1,1,5,4,4,4,5,4,4,4,1,5,1,1,1,5,5,5,1),
-    (1,4,4,4,4,5,4,1,1,4,5,5,5,5,5,1,5,6,1),
-    (1,5,4,4,4,4,1,7,6,6,5,5,1,5,5,1,1,1),
-    (0,1,5,4,4,4,1,7,6,4,5,1,5,5,1),
-    (0,0,1,1,5,5,5,5,5,5,1,5,5,5,1),
-    (0,0,0,0,1,1,1,1,1,1,1,6,5,6,1),
-    (0,0,0,0,0,0,0,0,0,0,0,1,1,1,0),
+    (0,1,4,4,5,4,5,5,4,1,1,1,2,2,2,2,3,2,1,0),
+    (1,1,5,4,4,4,4,4,4,4,4,1,2,2,2,1,1,1,1,0),
+    (1,1,5,4,4,4,5,4,4,4,1,5,1,1,1,5,5,5,1,0),
+    (1,4,4,4,4,5,4,1,1,4,5,5,5,5,5,1,5,6,1,0),
+    (1,5,4,4,4,4,1,7,6,6,5,5,1,5,5,1,1,1,0,0),
+    (0,1,5,4,4,4,1,7,6,4,5,1,5,5,1,0,0,0,0,0),
+    (0,0,1,1,5,5,5,5,5,5,1,5,5,5,1,0,0,0,0,0),
+    (0,0,0,0,1,1,1,1,1,1,1,6,5,6,1,0,0,0,0,0),
+    (0,0,0,0,0,0,0,0,0,0,0,1,1,1,0,0,0,0,0,0),
   );
+  $size: 6px;
 
   position: relative;
   display: inline-block;
-  width: calc(1em * 20);
-  height: calc(1em * 17);
-  font-size: 6px;
+  width: $size * length(nth($bulbasaur, 1));
+  height: $size * length($bulbasaur);
 
   &::before {
     position: absolute;
-    top: -1em;
-    left: -1em;
+    top: -$size;
+    left: -$size;
     content: "";
     background: transparent;
 
-    @include pixelize($bulbasaur, $bulbasaur-colors);
+    @include pixelize($size, $bulbasaur, $bulbasaur-colors);
   }
 }
