--- a/scss/pixel-arts/kirby.scss
+++ b/scss/pixel-arts/kirby.scss
@@ -2,12 +2,12 @@
   $kirby-colors: (#000, #ffaccc, #ff5478);
   // prettier-ignore
   $kirby: (
-    (0,0,1,1,0,1,1,1,1,1,0,0,0,0),
-    (0,1,2,2,1,2,2,2,2,2,1,1,0,0),
-    (1,2,2,1,2,2,2,2,2,2,2,2,1,0),
-    (1,2,2,2,2,2,1,2,1,2,2,2,2,1),
-    (1,2,2,2,2,2,1,2,1,2,2,2,2,1,),
-    (1,2,2,2,2,2,1,2,1,2,2,2,2,2,1),
+    (0,0,1,1,0,1,1,1,1,1,0,0,0,0,0,0),
+    (0,1,2,2,1,2,2,2,2,2,1,1,0,0,0,0),
+    (1,2,2,1,2,2,2,2,2,2,2,2,1,0,0,0),
+    (1,2,2,2,2,2,1,2,1,2,2,2,2,1,0,0),
+    (1,2,2,2,2,2,1,2,1,2,2,2,2,1,0,0),
+    (1,2,2,2,2,2,1,2,1,2,2,2,2,2,1,0),
     (1,2,2,2,3,3,2,2,2,3,3,2,2,2,2,1),
     (1,2,2,2,2,2,2,1,2,2,2,2,2,2,2,1),
     (0,1,2,2,2,2,2,1,2,2,2,2,2,2,2,1),
@@ -15,24 +15,24 @@
     (0,1,2,2,2,2,2,2,2,2,2,1,3,3,3,1),
     (0,0,1,2,2,2,2,2,2,2,1,3,3,3,3,1),
     (0,0,1,1,2,2,2,2,2,2,1,3,3,3,3,1),
-    (0,1,3,3,1,1,2,2,2,1,3,3,3,3,1),
-    (1,3,3,3,3,3,1,1,1,1,1,3,3,1),
-    (0,1,1,1,1,1,1,0,0,0,1,1,1,0)
+    (0,1,3,3,1,1,2,2,2,1,3,3,3,3,1,0),
+    (1,3,3,3,3,3,1,1,1,1,1,3,3,1,0,0),
+    (0,1,1,1,1,1,1,0,0,0,1,1,1,0,0,0)
   );
+  $size: 6px;
 
   position: relative;
   display: inline-block;
-  width: calc(1em * 16);
-  height: calc(1em * 16);
-  font-size: 6px;
+  width: $size * length(nth($kirby, 1));
+  height: $size * length($kirby);
 
   &::before {
     position: absolute;
-    top: -1em;
-    left: -1em;
+    top: -$size;
+    left: -$size;
     content: "";
     background: transparent;
 
-    @include pixelize($kirby, $kirby-colors);
+    @include pixelize($size, $kirby, $kirby-colors);
   }
 }
