--- a/scss/pixel-arts/phone.scss
+++ b/scss/pixel-arts/phone.scss
@@ -24,20 +24,20 @@
     (0,3,3,2,2,2,1,3),
     (0,0,3,3,3,3,3,3)
   );
+  $size: 6px;
 
   position: relative;
   display: inline-block;
-  width: calc(1em * 8);
-  height: calc(1em * 21);
-  font-size: 6px;
+  width: $size * length(nth($phone, 1));
+  height: $size * length($phone);
 
   &::before {
     position: absolute;
-    top: -1em;
-    left: -1em;
+    top: -$size;
+    left: -$size;
     content: "";
     background: transparent;
 
-    @include pixelize($phone, $phone-colors);
+    @include pixelize($size, $phone, $phone-colors);
   }
 }
